Map up and running, coordinates point to NYC

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <title>Maps Viewer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <script src="main.js"></script>
 </head>
 
 <body>
-  <h1 id='map'></h1>
+  <div id='map'></div>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGhLiBwZAg7ZCPA1pcT5BalJ88hvIaHts&libraries=places&callback=initialize"></script>
 </body>
-
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGhLiBwZAg7ZCPA1pcT5BalJ88hvIaHts&libraries=places"></script>
-<script src="main.js"></script>
 </html>
 
 
