--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <title>Maps Viewer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
 </head>
 
 <body>
+  <input type="text" id='pac-input' value="">
   <div id='map'></div>
+
+  <script src="main.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGhLiBwZAg7ZCPA1pcT5BalJ88hvIaHts&libraries=places&callback=initialize"></script>
 </body>
 </html>
